parser/antlr/graphql_parser.go
// Code generated from /home/baba/dev/workspace/go/src/github.com/baba2k/graphql-rungen/parser/grammar/GraphQL.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // GraphQL

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'['", "']'", "'{'", "'}'", "':'", "'@'", "'('", "')'", "'$'", "'='",
	"'!'", "'...'", "'on'", "'&'", "'|'", "'fragment'", "'query'", "'mutation'",
	"'subscription'", "'schema'", "'scalar'", "'type'", "'interface'", "'implements'",
	"'enum'", "'union'", "'input'", "'extend'", "'directive'", "", "", "'null'",
	"", "", "'-'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "FRAGMENT",
	"QUERY", "MUTATION", "SUBSCRIPTION", "SCHEMA", "SCALAR", "TYPE", "INTERFACE",
	"IMPLEMENTS", "ENUM", "UNION", "INPUT", "EXTEND", "DIRECTIVE", "NAME",
	"BooleanValue", "NullValue", "IntValue", "FloatValue", "Sign", "IntegerPart",
	"NonZeroDigit", "ExponentPart", "Digit", "StringValue", "TripleQuotedStringValue",
	"Comment", "Ignored",
}

var ruleNames = []string{
	"document", "definition", "operationType", "description", "enumValue",
	"arrayValue", "arrayValueWithVariable", "objectValue", "objectValueWithVariable",
	"objectField", "objectFieldWithVariable", "directives", "directive", "arguments",
	"argument", "name", "value", "valueWithVariable", "variable", "defaultValue",
	"stringValue", "objType", "typeName", "listType", "nonNullType", "operationDefinition",
	"variableDefinitions", "variableDefinition", "selectionSet", "selection",
	"field", "alias", "fragmentSpread", "inlineFragment", "fragmentDefinition",
	"fragmentName", "typeCondition", "typeSystemDefinition", "schemaDefinition",
	"operationTypeDefinition", "typeDefinition", "typeExtension", "scalarTypeDefinition",
	"scalarTypeExtensionDefinition", "objectTypeDefinition", "objectTypeExtensionDefinition",
	"implementsInterfaces", "fieldsDefinition", "fieldDefinition", "argumentsDefinition",
	"inputValueDefinition", "interfaceTypeDefinition", "interfaceTypeExtensionDefinition",
	"unionTypeDefinition", "unionTypeExtensionDefinition", "unionMembership",
	"unionMembers", "enumTypeDefinition", "enumTypeExtensionDefinition", "enumValueDefinitions",
	"enumValueDefinition", "inputObjectTypeDefinition", "inputObjectTypeExtensionDefinition",
	"inputObjectValueDefinitions", "directiveDefinition", "directiveLocation",
	"directiveLocations",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type GraphQLParser struct {
	*antlr.BaseParser
}

func NewGraphQLParser(input antlr.TokenStream) *GraphQLParser {
	this := new(GraphQLParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "GraphQL.g4"

	return this
}

// GraphQLParser tokens.
const (
	GraphQLParserEOF                     = antlr.TokenEOF
	GraphQLParserT__0                    = 1
	GraphQLParserT__1                    = 2
	GraphQLParserT__2                    = 3
	GraphQLParserT__3                    = 4
	GraphQLParserT__4                    = 5
	GraphQLParserT__5                    = 6
	GraphQLParserT__6                    = 7
	GraphQLParserT__7                    = 8
	GraphQLParserT__8                    = 9
	GraphQLParserT__9                    = 10
	GraphQLParserT__10                   = 11
	GraphQLParserT__11                   = 12
	GraphQLParserT__12                   = 13
	GraphQLParserT__13                   = 14
	GraphQLParserT__14                   = 15
	GraphQLParserFRAGMENT                = 16
	GraphQLParserQUERY                   = 17
	GraphQLParserMUTATION                = 18
	GraphQLParserSUBSCRIPTION            = 19
	GraphQLParserSCHEMA                  = 20
	GraphQLParserSCALAR                  = 21
	GraphQLParserTYPE                    = 22
	GraphQLParserINTERFACE               = 23
	GraphQLParserIMPLEMENTS              = 24
	GraphQLParserENUM                    = 25
	GraphQLParserUNION                   = 26
	GraphQLParserINPUT                   = 27
	GraphQLParserEXTEND                  = 28
	GraphQLParserDIRECTIVE               = 29
	GraphQLParserNAME                    = 30
	GraphQLParserBooleanValue            = 31
	GraphQLParserNullValue               = 32
	GraphQLParserIntValue                = 33
	GraphQLParserFloatValue              = 34
	GraphQLParserSign                    = 35
	GraphQLParserIntegerPart             = 36
	GraphQLParserNonZeroDigit            = 37
	GraphQLParserExponentPart            = 38
	GraphQLParserDigit                   = 39
	GraphQLParserStringValue             = 40
	GraphQLParserTripleQuotedStringValue = 41
	GraphQLParserComment                 = 42
	GraphQLParserIgnored                 = 43
)

// GraphQLParser rules.
const (
	GraphQLParserRULE_document                           = 0
	GraphQLParserRULE_definition                         = 1
	GraphQLParserRULE_operationType                      = 2
	GraphQLParserRULE_description                        = 3
	GraphQLParserRULE_enumValue                          = 4
	GraphQLParserRULE_arrayValue                         = 5
	GraphQLParserRULE_arrayValueWithVariable             = 6
	GraphQLParserRULE_objectValue                        = 7
	GraphQLParserRULE_objectValueWithVariable            = 8
	GraphQLParserRULE_objectField                        = 9
	GraphQLParserRULE_objectFieldWithVariable            = 10
	GraphQLParserRULE_directives                         = 11
	GraphQLParserRULE_directive                          = 12
	GraphQLParserRULE_arguments                          = 13
	GraphQLParserRULE_argument                           = 14
	GraphQLParserRULE_name                               = 15
	GraphQLParserRULE_value                              = 16
	GraphQLParserRULE_valueWithVariable                  = 17
	GraphQLParserRULE_variable                           = 18
	GraphQLParserRULE_defaultValue                       = 19
	GraphQLParserRULE_stringValue                        = 20
	GraphQLParserRULE_objType                            = 21
	GraphQLParserRULE_typeName                           = 22
	GraphQLParserRULE_listType                           = 23
	GraphQLParserRULE_nonNullType                        = 24
	GraphQLParserRULE_operationDefinition                = 25
	GraphQLParserRULE_variableDefinitions                = 26
	GraphQLParserRULE_variableDefinition                 = 27
	GraphQLParserRULE_selectionSet                       = 28
	GraphQLParserRULE_selection                          = 29
	GraphQLParserRULE_field                              = 30
	GraphQLParserRULE_alias                              = 31
	GraphQLParserRULE_fragmentSpread                     = 32
	GraphQLParserRULE_inlineFragment                     = 33
	GraphQLParserRULE_fragmentDefinition                 = 34
	GraphQLParserRULE_fragmentName                       = 35
	GraphQLParserRULE_typeCondition                      = 36
	GraphQLParserRULE_typeSystemDefinition               = 37
	GraphQLParserRULE_schemaDefinition                   = 38
	GraphQLParserRULE_operationTypeDefinition            = 39
	GraphQLParserRULE_typeDefinition                     = 40
	GraphQLParserRULE_typeExtension                      = 41
	GraphQLParserRULE_scalarTypeDefinition               = 42
	GraphQLParserRULE_scalarTypeExtensionDefinition      = 43
	GraphQLParserRULE_objectTypeDefinition               = 44
	GraphQLParserRULE_objectTypeExtensionDefinition      = 45
	GraphQLParserRULE_implementsInterfaces               = 46
	GraphQLParserRULE_fieldsDefinition                   = 47
	GraphQLParserRULE_fieldDefinition                    = 48
	GraphQLParserRULE_argumentsDefinition                = 49
	GraphQLParserRULE_inputValueDefinition               = 50
	GraphQLParserRULE_interfaceTypeDefinition            = 51
	GraphQLParserRULE_interfaceTypeExtensionDefinition   = 52
	GraphQLParserRULE_unionTypeDefinition                = 53
	GraphQLParserRULE_unionTypeExtensionDefinition       = 54
	GraphQLParserRULE_unionMembership                    = 55
	GraphQLParserRULE_unionMembers                       = 56
	GraphQLParserRULE_enumTypeDefinition                 = 57
	GraphQLParserRULE_enumTypeExtensionDefinition        = 58
	GraphQLParserRULE_enumValueDefinitions               = 59
	GraphQLParserRULE_enumValueDefinition                = 60
	GraphQLParserRULE_inputObjectTypeDefinition          = 61
	GraphQLParserRULE_inputObjectTypeExtensionDefinition = 62
	GraphQLParserRULE_inputObjectValueDefinitions        = 63
	GraphQLParserRULE_directiveDefinition                = 64
	GraphQLParserRULE_directiveLocation                  = 65
	GraphQLParserRULE_directiveLocations                 = 66
)

// IDocumentContext is an interface to support dynamic dispatch.
type IDocumentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDocumentContext differentiates from other interfaces.
	IsDocumentContext()
}

type DocumentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDocumentContext() *DocumentContext {
	var p = new(DocumentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraphQLParserRULE_document
	return p
}

func (*DocumentContext) IsDocumentContext() {}

func NewDocumentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DocumentContext {
	var p = new(DocumentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraphQLParserRULE_document

	return p
}

func (s *DocumentContext) GetParser() antlr.Parser { return s.parser }

func (s *DocumentContext) AllDefinition() []IDefinitionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDefinitionContext)(nil)).Elem())
	var tst = make([]IDefinitionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDefinitionContext)
		}
	}

	return tst
}

func (s *DocumentContext) Definition(i int) IDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDefinitionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDefinitionContext)
}

func (s *DocumentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DocumentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DocumentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.EnterDocument(s)
	}
}

func (s *DocumentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.ExitDocument(s)
	}
}

func (p *GraphQLParser) Document() (localctx IDocumentContext) {
	localctx = NewDocumentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GraphQLParserRULE_document)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(135)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<GraphQLParserT__2)|(1<<GraphQLParserFRAGMENT)|(1<<GraphQLParserQUERY)|(1<<GraphQLParserMUTATION)|(1<<GraphQLParserSUBSCRIPTION)|(1<<GraphQLParserSCHEMA)|(1<<GraphQLParserSCALAR)|(1<<GraphQLParserTYPE)|(1<<GraphQLParserINTERFACE)|(1<<GraphQLParserENUM)|(1<<GraphQLParserUNION)|(1<<GraphQLParserINPUT)|(1<<GraphQLParserEXTEND)|(1<<GraphQLParserDIRECTIVE))) != 0) || _la == GraphQLParserStringValue || _la == GraphQLParserTripleQuotedStringValue {
		{
			p.SetState(134)
			p.Definition()
		}

		p.SetState(137)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IDefinitionContext is an interface to support dynamic dispatch.
type IDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDefinitionContext differentiates from other interfaces.
	IsDefinitionContext()
}

type DefinitionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDefinitionContext() *DefinitionContext {
	var p = new(DefinitionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraphQLParserRULE_definition
	return p
}

func (*DefinitionContext) IsDefinitionContext() {}

func NewDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefinitionContext {
	var p = new(DefinitionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraphQLParserRULE_definition

	return p
}

func (s *DefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *DefinitionContext) OperationDefinition() IOperationDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOperationDefinitionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOperationDefinitionContext)
}

func (s *DefinitionContext) FragmentDefinition() IFragmentDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFragmentDefinitionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFragmentDefinitionContext)
}

func (s *DefinitionContext) TypeSystemDefinition() ITypeSystemDefinitionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypeSystemDefinitionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypeSystemDefinitionContext)
}

func (s *DefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.EnterDefinition(s)
	}
}

func (s *DefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.ExitDefinition(s)
	}
}

func (p *GraphQLParser) Definition() (localctx IDefinitionContext) {
	localctx = NewDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GraphQLParserRULE_definition)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(142)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case GraphQLParserT__2, GraphQLParserQUERY, GraphQLParserMUTATION, GraphQLParserSUBSCRIPTION:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(139)
			p.OperationDefinition()
		}

	case GraphQLParserFRAGMENT:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(140)
			p.FragmentDefinition()
		}

	case GraphQLParserSCHEMA, GraphQLParserSCALAR, GraphQLParserTYPE, GraphQLParserINTERFACE, GraphQLParserENUM, GraphQLParserUNION, GraphQLParserINPUT, GraphQLParserEXTEND, GraphQLParserDIRECTIVE, GraphQLParserStringValue, GraphQLParserTripleQuotedStringValue:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(141)
			p.TypeSystemDefinition()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IOperationTypeContext is an interface to support dynamic dispatch.
type IOperationTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOperationTypeContext differentiates from other interfaces.
	IsOperationTypeContext()
}

type OperationTypeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOperationTypeContext() *OperationTypeContext {
	var p = new(OperationTypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraphQLParserRULE_operationType
	return p
}

func (*OperationTypeContext) IsOperationTypeContext() {}

func NewOperationTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OperationTypeContext {
	var p = new(OperationTypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraphQLParserRULE_operationType

	return p
}

func (s *OperationTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *OperationTypeContext) SUBSCRIPTION() antlr.TerminalNode {
	return s.GetToken(GraphQLParserSUBSCRIPTION, 0)
}

func (s *OperationTypeContext) MUTATION() antlr.TerminalNode {
	return s.GetToken(GraphQLParserMUTATION, 0)
}

func (s *OperationTypeContext) QUERY() antlr.TerminalNode {
	return s.GetToken(GraphQLParserQUERY, 0)
}

func (s *OperationTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OperationTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OperationTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.EnterOperationType(s)
	}
}

func (s *OperationTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.ExitOperationType(s)
	}
}

func (p *GraphQLParser) OperationType() (localctx IOperationTypeContext) {
	localctx = NewOperationTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GraphQLParserRULE_operationType)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(144)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<GraphQLParserQUERY)|(1<<GraphQLParserMUTATION)|(1<<GraphQLParserSUBSCRIPTION))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IDescriptionContext is an interface to support dynamic dispatch.
type IDescriptionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDescriptionContext differentiates from other interfaces.
	IsDescriptionContext()
}

type DescriptionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDescriptionContext() *DescriptionContext {
	var p = new(DescriptionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraphQLParserRULE_description
	return p
}

func (*DescriptionContext) IsDescriptionContext() {}

func NewDescriptionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DescriptionContext {
	var p = new(DescriptionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraphQLParserRULE_description

	return p
}

func (s *DescriptionContext) GetParser() antlr.Parser { return s.parser }

func (s *DescriptionContext) StringValue() IStringValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStringValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStringValueContext)
}

func (s *DescriptionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DescriptionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DescriptionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.EnterDescription(s)
	}
}

func (s *DescriptionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.ExitDescription(s)
	}
}

func (p *GraphQLParser) Description() (localctx IDescriptionContext) {
	localctx = NewDescriptionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, GraphQLParserRULE_description)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(146)
		p.StringValue()
	}

	return localctx
}

// IEnumValueContext is an interface to support dynamic dispatch.
type IEnumValueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsEnumValueContext differentiates from other interfaces.
	IsEnumValueContext()
}

type EnumValueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEnumValueContext() *EnumValueContext {
	var p = new(EnumValueContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraphQLParserRULE_enumValue
	return p
}

func (*EnumValueContext) IsEnumValueContext() {}

func NewEnumValueContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EnumValueContext {
	var p = new(EnumValueContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraphQLParserRULE_enumValue

	return p
}

func (s *EnumValueContext) GetParser() antlr.Parser { return s.parser }

func (s *EnumValueContext) Name() INameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INameContext)
}

func (s *EnumValueContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EnumValueContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EnumValueContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.EnterEnumValue(s)
	}
}

func (s *EnumValueContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphQLListener); ok {
		listenerT.ExitEnumValue(s)
	}
}

func (p *GraphQLParser) EnumValue() (localctx IEnumValueContext) {
	localctx = NewEnumValueContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, GraphQLParserRULE_enumValue)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(148)
		p.Name()
	}

	return localctx
}

// IArrayValueContext is an interface to support dynamic dispatch.
type IArrayValueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsArrayValueContext differentiates from other interfaces.
	IsArrayValueContext()
}

type ArrayValueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}
